feat: add doc for find
